# vigil

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/models/: mod.rs
src/scanners/: cargo.rs  go.rs  mod.rs  npm.rs  python.rs  uv.rs
src/sources/: cache.rs  maintenance.rs  mod.rs  osv.rs
src/ui/: tui.rs
tests/: integration_test.rs
