[package]
name = "vigil"
version = "0.1.0"
edition = "2021"
authors = ["Sumant <sumant1122@gmail.com>"]
description = "A universal supply chain health dashboard"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
colored = "2.1"
futures = "0.3"
itertools = "0.12"
unicode-width = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
